@@ -1,11 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST Radicale-0.7.1.tar.gz 35355 SHA256 36e076b8c54be9df61a8434e9670d852429dcae557fadb77de23e762258bb8e4 SHA512 00ad9788b39a33f94e656e9104e1a81a9052b182021ea486d865a826c8e8711d58476beb35b89fd46371166886d9a312f417db49d81293d0434af0261c1636e1 WHIRLPOOL a353dad90c3391e104b113479b975e4a29049e7c4301122c6ed064233cc757661ea56ee92fbfe21c97e2702787bd8f639ae93418d68ac3abacb744848d909fa1
 DIST Radicale-0.7.tar.gz 34061 SHA256 f3d17d16bac4cbeedc5e66a8b711f29d51309e9264a9ef930b5d466503794c09 SHA512 7c7fb9ad0b9820d490f615af9193bbbbb204aee9f940264221d2e74ef72ffcc28bdb84b97dcd225efe117d346e386465c25c1798875831587033341e432716f0 WHIRLPOOL e6322e41c0ebcf19eb8874f574a797a4aa4c63822587be4c59ebce105c2b19b9e9bc1dc09890f5a5d0a5d95a6029ab6ab8ea0f82362d3f893a65d91d42482e22
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlAcwXgACgkQiIP6VqMIqNeoGAEAhLl7NtryGQOSOaA3ZZTnyle+
-QdgHjOudyLrXWaGhTGoBAInNHP0KpEIiNvx5F99my0m9RQ+/sIrd+J75wOKDVn43
-=SYvU
+iF4EAREIAAYFAlAcwaAACgkQiIP6VqMIqNeDxQD9Ey9TZRN+lBymoOguWbuQxmPa
+duuvkpCTH9oCgrDHf+cA/iyvIMT+bal/O1kjCrJRJgks+K4ClAO4F1uPgeN5BeNn
+=Bav1
 -----END PGP SIGNATURE-----
