@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*radicale-0.7.1 (04 Aug 2012)
+
+  04 Aug 2012; Hans de Graaff <graaff@gentoo.org> +radicale-0.7.1.ebuild:
+  Version bump.
+
   04 Aug 2012; Hans de Graaff <graaff@gentoo.org> -radicale-0.6.2.ebuild,
   -radicale-0.6.3.ebuild, -radicale-0.6.4.ebuild:
   Cleanup.
